# world-app

./: README.md  eslint.config.js  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: android-build.yaml  ios-build.yaml  web-build.yaml
app/: index.html  package.json  vite.config.ts
app/src/: App.tsx  i18n.ts  index.css  main.tsx  tokens.css
app/src/components/: AccountListItem.tsx  AcknowledgeButton.tsx  AcknowledgeList.tsx  AddAccountDrawer.tsx  AliasSetupModalContent.tsx  AutoSummary.tsx  BackupKeyButton.tsx  BlurhashImage.tsx  ClassicExplorer.tsx  Composer.tsx  DomainOfflineBanner.tsx  EmergencyKit.tsx  EmojiSuggestion.tsx  ImageCropper.tsx  ListSettings.tsx  NotificationFilter.tsx  NotificationTimeline.tsx  OverlayStackBackBridge.tsx  PrivateContentDoor.tsx  ProfileEditor.tsx  ProfileName.tsx  PullToRefresh.tsx  QueryTimeline.tsx  RealtimeTimeline.tsx  ResetSessionButton.tsx  ScaleSelector.tsx  SearchExplorer.tsx  SegmentedControl.tsx  ServerSelector.tsx  Sidebar.tsx  SubkeyInvalidDrawer.tsx  Subscription.tsx  SwitchAccountButton.tsx  TabView.tsx  ThemeCard.tsx  ThemeEditor.tsx  ThemeImporter.tsx  TimelineCard.tsx  TimelinePicker.tsx  TimelineSettings.tsx  (+2 more)
app/src/contexts/: AgeGate.tsx  AudioPlayer.tsx  BackHandler.tsx  Client.tsx  (+14 more)
client/: package.json
client/src/: api.ts  cdid.ts  core.ts  crypto.ts  index.ts  js-sha3.d.ts  model.ts  queryTimelineReader.ts  socket.ts  timelineReader.ts  util.ts
locales/: index.ts  package.json
locales/en/: translation.json
locales/ja/: translation.json
plugins/tauri-plugin-ageverify/: Cargo.toml  README.md  build.rs
plugins/tauri-plugin-ageverify/ios/: Package.swift
plugins/tauri-plugin-ageverify/ios/Sources/: AgeVerifyPlugin.swift
plugins/tauri-plugin-ageverify/permissions/: default.toml
plugins/tauri-plugin-ageverify/permissions/autogenerated/: reference.md
plugins/tauri-plugin-ageverify/permissions/autogenerated/commands/: request_age_range.toml
plugins/tauri-plugin-ageverify/permissions/schemas/: schema.json
plugins/tauri-plugin-ageverify/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
plugins/tauri-plugin-file-saver/: Cargo.toml  README.md  build.rs  package.json
plugins/tauri-plugin-keyboard/: Cargo.toml  README.md  build.rs
plugins/tauri-plugin-keyboard/android/: .gitignore  build.gradle.kts
plugins/tauri-plugin-keyboard/android/src/main/java/: KeyboardPlugin.kt
plugins/tauri-plugin-keyboard/ios/Sources/: KeyboardPlugin.swift
plugins/tauri-plugin-keyboard/permissions/: default.toml
plugins/tauri-plugin-keyboard/permissions/autogenerated/: reference.md
plugins/tauri-plugin-keyboard/permissions/schemas/: schema.json
plugins/tauri-plugin-keyboard/src/: desktop.rs  lib.rs  mobile.rs
plugins/tauri-plugin-keychain/: build.rs
plugins/tauri-plugin-push/: Cargo.toml  README.md  build.rs
plugins/tauri-plugin-push/android/: build.gradle.kts  consumer-rules.pro
plugins/tauri-plugin-push/android/src/main/: AndroidManifest.xml
plugins/tauri-plugin-push/android/src/main/java/world/concrnt/plugin/push/: ConcrntMessagingService.kt  NotificationRenderer.kt  PushCrypto.kt  PushKeyStore.kt  PushPlugin.kt
plugins/tauri-plugin-push/android/src/test/java/world/concrnt/plugin/push/: PushCryptoTest.kt
plugins/tauri-plugin-push/ios/: Package.swift
plugins/tauri-plugin-push/ios/Sources/PushShared/: Base64URL.swift  NotificationContent.swift  PushCrypto.swift  PushKeyStore.swift
plugins/tauri-plugin-push/ios/Sources/tauri-plugin-push/: PushPlugin.swift
plugins/tauri-plugin-push/ios/Tests/PluginTests/: PushCryptoTests.swift
plugins/tauri-plugin-push/permissions/: default.toml
plugins/tauri-plugin-push/permissions/autogenerated/: reference.md
plugins/tauri-plugin-push/permissions/autogenerated/commands/: get_launch_notification.toml  get_or_create_keys.toml  reset_keys.toml  set_context.toml
plugins/tauri-plugin-push/permissions/schemas/: schema.json
plugins/tauri-plugin-push/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
plugins/tauri-plugin-safari-scroll-killer/: Cargo.toml  README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  ios.json
src-tauri/crates/concrnt/: Cargo.toml
src-tauri/crates/concrnt/src/: identity.rs  ids.rs  lib.rs  mnemonic.rs  signing.rs
src-tauri/icons/: icon.icns
src-tauri/src/: accounts.rs  auth.rs  backup.rs  commands.rs  lib.rs  session.rs
ui/: package.json  tsconfig.app.json  tsconfig.build.json  vite.config.ts
ui/.storybook/: main.ts  preview.tsx
ui/src/: index.ts
web/: Dockerfile  index.html  nginx.conf  package.json  tsconfig.app.json  tsconfig.sw.json  vite.config.ts
web/src/: App.tsx  LoginGuard.tsx  index.css  main.tsx  sw.ts  util.ts
worldlib/: package.json
worldlib/src/: association.ts  cachedPromise.ts  client.ts  index.ts  list.ts  message.ts  migration.ts  schemas.ts  semantics.ts  timeline.ts  user.ts  util.ts  v1import.ts
(+421 files in other folders)
