[package]
name = "world-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "world_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"

bip39 = { version = "2", features = ["rand", "all-languages"] }
unicode-normalization = "0.1"
bech32 = "0.11"
sha2 = "0.10"
secp256k1 = { version = "0.29", features = ["recovery"] }
ripemd = "0.1"
hex = "0.4"
bip32 = "0.5"
sha3 = "0.10"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-biometric = "2"
tauri-plugin-keychain = { version="2.0.2", path = "../plugins/tauri-plugin-keychain" }
tauri-plugin-barcode-scanner = "2"

[target.'cfg(any(target_os = "ios"))'.dependencies]
tauri-plugin-safari-scroll-killer = { version="0.1.0", path = "../plugins/tauri-plugin-safari-scroll-killer" }

