[package]
name = "world-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[workspace]
members = [".", "crates/concrnt"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "world_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"
concrnt = { path = "crates/concrnt" }

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-biometric = "2"
tauri-plugin-keychain = { version = "2.0.2", path = "../plugins/tauri-plugin-keychain" }
tauri-plugin-barcode-scanner = { version = "2.4.5" }
tauri-plugin-haptics = "2"
tauri-plugin-file-saver = { version = "0.1.0", path = "../plugins/tauri-plugin-file-saver" }
tauri-plugin-keyboard = { version = "0.1.0", path = "../plugins/tauri-plugin-keyboard" }

[target.'cfg(any(target_os = "ios"))'.dependencies]
tauri-plugin-safari-scroll-killer = { version = "0.1.0", path = "../plugins/tauri-plugin-safari-scroll-killer" }
