[package]
name = "tauri-plugin-ageverify"
version = "0.1.0"
authors = [ "You" ]
description = "Age assurance gate backed by Apple's Declared Age Range API (iOS)"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-ageverify"

[dependencies]
tauri = { version = "2.9.5" }
serde = "1.0"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.5.2", features = ["build"] }
