[package]
name = "tauri-plugin-push"
version = "0.1.0"
authors = [ "concrnt" ]
description = "Native push notification registration (APNs/FCM token + on-device WebPush keys) for the concrnt app"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-push"

[dependencies]
tauri = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
