[package]
name = "concrnt"
version = "0.1.0"
edition = "2021"

[dependencies]
bech32 = "0.11"
bip32 = "0.5"
bip39 = { version = "2", features = ["rand", "all-languages"] }
hex = "0.4"
ripemd = "0.1"
secp256k1 = { version = "0.29", features = ["recovery"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
sha3 = "0.10"
unicode-normalization = "0.1"
